test/vm/fails/invalid_conv_integer_string_2.js

uint("0b23456789");
